Archive2/af/61368c7ac3de54/output
main.cpp:5:5: error: static_assert failed "..."
    static_assert(std::is_same<T, signed char>::value, "...");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:10:5: note: in instantiation of function template specialization 'stacktrace<char>' requested here
    stacktrace<char>();
    ^
main.cpp:6:5: error: static_assert failed "..."
    static_assert(std::is_same<T, unsigned char>::value, "...");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
